Changes from version 0.6.0-pre3 to 0.6.0-pre4
- Added some patches for MS VC++ compiling. (Giuseppe "Cowo" Corbelli)
- Changed year of copyright
- Added examples 10 and 11

Changes from version 0.6.0-pre2 to 0.6.0-pre3
- Fixed the missing utilspp files in the source distribution.

Changes from version 0.6.0-pre1 to 0.6.0-pre2
- Fixed the missing files in the Makefile.am

Changes from version 0.5.2 to 0.6.0-pre1
- Added Functor feature.
- Removed the Easy::print function.
- Added GetInfo feature.
- Removed the cURL namespace.
- Updated the copyright year.
- Added the CURLOPT_COOKIELIST patch from Peter Krumins.
  This patch need to be enabled by the --enable-maintener.

Changes from version 0.5.1 to 0.5.2
- RPM fixes.
- Updated the documentation related to the exception safe feature.
- cURLpp::Options::PostFieldSize is now a long, and 
  cURLpp::Options::PostFieldSizeLarge is now a cURL::curl_off_t
  (thanks to Nicolas Le Goff)
- Now we can build with MinGW.
- Improved libcURL test.
- Added the BUILDING_CURLPP Define (DLL building). 

Changes from version 0.5.0 to 0.5.1
- cURLpp::Options::HttpGet and cURLpp::Options::CookieSession are now
  using bool values. (thanks to Peteris Krumins)

Changes from version 0.5.0-rc7 to 0.5.0
- Removed the "string" way to handle memory.
- Another patch to be able to compile on Sun's WorkShop C 
  and C++ compilers, version 6. (Thanks to Ben Golding 
  <bgg_no_spam at object dash craft dot com dot au>)

Changes from version 0.5.0-rc6 to 0.5.0-rc7
- Removed the AC_DISABLE_STATIC in configure script.
- Added the example05.cpp
- Now we can compile it with GCC-2.95
- Added the cURLpp::Easy::getHandle function.

Changes from version 0.5.0-rc5 to 0.5.0-rc6
- Updated namespace problems in example04.cpp.
- Fixed the VC++ "Release (dynamic)" configuration.
- Patch to be able to compile on Sun's WorkShop C 
  and C++ compilers, version 6. (Thanks to Ben Golding 
  <bgg_no_spam at object dash craft dot com dot au>)