@@ -6,6 +6,8 @@ configure.in is a good example to add curlpp to your project
  Example 04: GetInfo example.
  Example 05: Function functor for WriteFunction example.
  Example 06: Method functor for WriteFunction example.
+ Example 07: Cookie interface example via getInfo.
+             Demonstrates usage of Infos::CookieList which example04 did not.
  Example 08: verbose callback example, with exception safe handling.
  Example 09: verbose callback example, with exception safe handling, 
              but without raiseException function.
@@ -13,8 +15,6 @@ configure.in is a good example to add curlpp to your project
 
 ** This example rely on a patch that will be available only
 ** on version 7.14.1 of libcURL.
- Example 7: cookie interface example via getInfo.
-            Demonstrates usage of SList which example04 did not.
  Example 10: Binded function functor for WriteFunction example.
  Example 12: HTTP POST example.
 
